--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <img src="./assets/images/logo.svg" alt="">
+        <div class="header--title-container">
+            <h1>La proxima revolución en el intercambio de criptomodenas</h1>
+            <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias</p>
+            <a class="header--button" href="">Conoce nuestros planes <span>I</span></a>
+        </div>
+    </header>
     <main>
         <section></section>
         <section></section>
