--- a/index.html
+++ b/index.html
@@ -16,11 +16,67 @@
         <div class="header--title-container">
             <h1>La proxima revolución en el intercambio de criptomodenas</h1>
             <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias</p>
-            <a class="header--button" href="">Conoce nuestros planes <span>I</span></a>
+            <a class="header--button" href="">Conoce nuestros planes <span></span></a>
         </div>
     </header>
     <main>
-        <section></section>
+        <section class="main-exchange-container">
+            <div class="backgroundimg">
+            </div>
+            <div class="main-exchange-container--title">
+                <h1>Visualizamos todas las casas de cambio</h1>
+                <p>Tenemos información e tiempo real de las casa de cambio y las monedas mas importantes de mundo</p>
+            </div>
+            <section class="main-tables-container">
+                <div class="main-currency-table">
+                    <p class="currency-table--title">Monedas</p>
+                    <div class="currency-table--container">
+                        <table>
+                            <tr>
+                                <td class="table__top-left">Bitcoin</span></td>
+                                <td class="table__top-right table__right">$1.96<span class="down"></span></td>
+                            </tr>
+                            <tr>
+                                <td>Ethereum</span></td>
+                                <td class="table__right">$0.07<span class="up"></span></td>
+                            </tr>
+                            <tr>
+                                <td>Riple</td>
+                                <td class="table__right">$2.17<span class="down"></span></td>
+                            </tr>
+                            <tr>
+                                <td class="table__buttom-left">Stellar</td>
+                                <td class="table__buttom-right table__right">$4.96<span class="down"></span></td>
+                            </tr>
+                        </table>
+                    </div>
+<!--                <div class="currency-table--container">
+                        <table>
+                            <tr>
+                                <td class="table__top-left">Bitrade</td>
+                                <td class="table__top-right table__right">$12.96</td>
+                            </tr>
+                            <tr>
+                                <td>Bitprecio</td>
+                                <td class="table__right">$13.07</span></td>
+                            </tr>
+                            <tr>
+                                <td>Novadax</td>
+                                <td class="table__right">$13.15</td>
+                            </tr>
+                            <tr>
+                                <td class="table__buttom-left">Coinext</td>
+                                <td class="table__buttom-right table__right">$14.96</td>
+                            </tr>
+                        </table>
+                    </div> -->
+                </div>
+                <div class="currency-table--date">
+                    <p><b>Actualizado: </b>19 de Julio  23:45</p>
+                </div>
+                </div>
+            </section>
+        </section>
         <section></section>
         <section></section>
         <section></section>
