--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <p>Tenemos información e tiempo real de las casa de cambio y las monedas mas importantes de mundo</p>
             </div>
             <section class="main-tables-container">
-                <div class="main-currency-table">
+                <div class="main-currency-table" id="table1">
                     <p class="currency-table--title">Monedas</p>
                     <div class="currency-table--container">
                         <table>
@@ -49,31 +49,45 @@
                                 <td class="table__buttom-right table__right">$4.96<span class="down"></span></td>
                             </tr>
                         </table>
+                        <!-- <a href="#table2" class="table-go-right">
+                            <img src="./assets/icons/arrow-rigth.svg" alt="Ir a la derecha">
+                        </a> -->
                     </div>
-<!--                <div class="currency-table--container">
+                    <div class="currency-table--date">
+                        <p><b>Actualizado: </b>19 de Julio  23:45</p>
+                    </div>
+                    </div> 
+                </div>
+                <!-- SEGUNDA TABLA -->
+                <div class="main-currency-table main-comission-table" id="table2">
+                    <p class="currency-table--title comission-table-title">Comisiones</p>
+                    <div class="currency-table--container">
                         <table>
                             <tr>
-                                <td class="table__top-left">Bitrade</td>
+                                <td class="table__top-left">Bitrade</span></td>
                                 <td class="table__top-right table__right">$12.96</td>
                             </tr>
                             <tr>
-                                <td>Bitprecio</td>
-                                <td class="table__right">$13.07</span></td>
+                                <td>Bitpreco</span></td>
+                                <td class="table__right">$13.07</td>
                             </tr>
                             <tr>
                                 <td>Novadax</td>
-                                <td class="table__right">$13.15</td>
+                                <td class="table__right">$13.1</td>
                             </tr>
                             <tr>
-                                <td class="table__buttom-left">Coinext</td>
+                                <td class="table__buttom-left">Coinex</td>
                                 <td class="table__buttom-right table__right">$14.96</td>
                             </tr>
                         </table>
-                    </div> -->
-                </div>
-                <div class="currency-table--date">
-                    <p><b>Actualizado: </b>19 de Julio  23:45</p>
-                </div>
+                        <!-- <a href="#table1" class="table-go-right table-go-left">
+                            <img src="./assets/icons/arrow-left.svg" alt="Ir a la derecha">
+                        </a> -->
+                    </div>
+                    <div class="currency-table--date comission-table--date">
+                        <p><b>Actualizado: </b>19 de Julio  23:45</p>
+                    </div>
+                    </div> 
                 </div>
             </section>
         </section>
