Third section finished, about the product

--- a/index.html
+++ b/index.html
@@ -49,9 +49,6 @@
                                 <td class="table__buttom-right table__right">$4.96<span class="down"></span></td>
                             </tr>
                         </table>
-                        <!-- <a href="#table2" class="table-go-right">
-                            <img src="./assets/icons/arrow-rigth.svg" alt="Ir a la derecha">
-                        </a> -->
                     </div>
                     <div class="currency-table--date">
                         <p><b>Actualizado: </b>19 de Julio  23:45</p>
@@ -80,9 +77,6 @@
                                 <td class="table__buttom-right table__right">$14.96</td>
                             </tr>
                         </table>
-                        <!-- <a href="#table1" class="table-go-right table-go-left">
-                            <img src="./assets/icons/arrow-left.svg" alt="Ir a la derecha">
-                        </a> -->
                     </div>
                     <div class="currency-table--date comission-table--date">
                         <p><b>Actualizado: </b>19 de Julio  23:45</p>
@@ -91,7 +85,43 @@
                 </div>
             </section>
         </section>
-        <section></section>
+        <section class="main-product-detail">
+            <span class="product-detail--batata-logo"></span>
+            <div class="product-detail--title">
+                <h2>Creamos un producto sin comparación</h2>
+                <p>Confiable y diseñado para su uso diario</p>
+            </div>
+            <section class="product-cards--container">
+                <article class="product-detail--card">
+                    <span class="icon"></span>
+                    <p class="product--card-title">Tiempo Real</p>
+                    <p class="product--card-body">Nuestra API toma información minuto a minuto
+                        sobre las tasas que mas determinan el comportamiento
+                    </p>
+                </article>
+                <article class="product-detail--card">
+                    <span class="icon eye"></span>
+                    <p class="product--card-title">No hay tasas escondidas</p>
+                    <p class="product--card-body">Ni en la compra o al momento de exit, Batabit siempre 
+                        te muestra el costo real de lo que estás adquiriendo.
+                    </p>
+                </article>
+                <article class="product-detail--card ">
+                    <span class="icon dollar"></span>
+                    <p class="product--card-title">Compara monedas</p>
+                    <p class="product--card-body">No rúmores, con Batabit sabrás el valor
+                        real de cada moneda en el mercado actual.
+                    </p>
+                </article>
+                <article class="product-detail--card">
+                    <span class="icon check"></span>
+                    <p class="product--card-title">Información confiable</p>
+                    <p class="product--card-body">Nuestras fuentes están 100% verificados 
+                        y continuamos auditando su contenido mientras se actualizan.
+                    </p>
+                </article>
+            </section>
+        </section>
         <section></section>
         <section></section>
     </main>    
