fourth session ended, image and headline

--- a/index.html
+++ b/index.html
@@ -116,13 +116,15 @@
                 <article class="product-detail--card">
                     <span class="icon check"></span>
                     <p class="product--card-title">Información confiable</p>
-                    <p class="product--card-body">Nuestras fuentes están 100% verificados 
+                    <p class="product--card-body">Nuestras fuentes están 100% verificadas 
                         y continuamos auditando su contenido mientras se actualizan.
                     </p>
                 </article>
             </section>
         </section>
-        <section></section>
+        <section class="bitcoin-img-container">
+            <h2> Conócelo hoy</h2>
+        </section>
         <section></section>
     </main>    
     <footer></footer>
