--- a/index.html
+++ b/index.html
@@ -125,7 +125,40 @@
         <section class="bitcoin-img-container">
             <h2> Conócelo hoy</h2>
         </section>
-        <section></section>
+        <section id="plans" class="main-plans-container">
+            <div class="plans--title">
+                <h2>Escoge el plan que mejor se ajuste a tí</h2>
+                <p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
+            </div>
+            <section class="plans-container-slider">
+                <article class="plans-container--card">
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Pago anual</h3>
+                        <p class="plan-card--price"><span>$</span>99</p>
+                        <p class="plan-card--saving">* Ahorras $ 129.00 comparado al plan mensual.</p>
+                        <button class="plan-card--ca">Escoge este <span></span></button>
+                    </div>
+                </article>
+                <article class="plans-container--card">
+                    <p class="card--recomended">Recomendado</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Pago anual</h3>
+                        <p class="plan-card--price"><span>$</span>99</p>
+                        <p class="plan-card--saving">* Ahorras $ 129.00 comparado al plan mensual.</p>
+                        <button class="plan-card--ca">Escoge este <span></span></button>
+                    </div>
+                </article>
+                <article class="plans-container--card">
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Pago anual</h3>
+                        <p class="plan-card--price"><span>$</span>99</p>
+                        <p class="plan-card--saving">* Ahorras $ 129.00 comparado al plan mensual.</p>
+                        <button class="plan-card--ca">Escoge este <span></span></button>
+                    </div>
+                </article>
+            </section>
+
+        </section>
     </main>    
     <footer></footer>
 </body>
