--- a/index.html
+++ b/index.html
@@ -160,6 +160,20 @@
 
         </section>
     </main>    
-    <footer></footer>
+    <footer>
+        <section class="left">
+            <ul>
+                <li><a href="">LinkedIn</a></li>
+                <li><a href="">Crunchbase</a></li>
+                <li><a href="">Hackersnews</a></li>
+            </ul>
+        </section>
+        <section class="right">
+            <figure>
+                <img src="./assets/images/logo-footer.svg" alt="Logo de Batatabit">
+            </figure>
+            
+        </section>
+    </footer>
 </body>
 </html>
