the scroll was added to the tables of the second section

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                     <div class="currency-table--date">
                         <p><b>Actualizado: </b>19 de Julio  23:45</p>
                     </div>
-                    </div> 
+                    </div>
                 </div>
                 <!-- SEGUNDA TABLA -->
-                <div class="main-currency-table main-comission-table" id="table2">
+                <div class="main-currency-table main-comission-table" id="table-two">
                     <p class="currency-table--title comission-table-title">Comisiones</p>
                     <div class="currency-table--container">
                         <table>
